// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/buildkite/extract extractDependencies() adds skipReason 1`] = `
Array [
  Object {
    "currentValue": "v1.3.2.5",
    "depName": "namespace/docker-compose",
    "lineNumber": 4,
    "purl": undefined,
    "skipReason": "invalid-version",
    "versionScheme": "semver",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "https://github.com/buildkite/plugin-docker-compose",
    "lineNumber": 15,
    "purl": undefined,
    "skipReason": "git-plugin",
    "versionScheme": "semver",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "github.com/buildkite/plugin-docker-compose",
    "lineNumber": 22,
    "purl": undefined,
    "skipReason": "unknown",
    "versionScheme": "semver",
  },
]
`;

exports[`lib/manager/buildkite/extract extractDependencies() extracts multiple plugins in same file 1`] = `
Array [
  Object {
    "currentValue": "v1.3.2",
    "depName": "docker-compose",
    "lineNumber": 4,
    "purl": "pkg:github/buildkite-plugins/docker-compose-buildkite-plugin",
    "skipReason": undefined,
    "versionScheme": "semver",
  },
  Object {
    "currentValue": "v1.3.2",
    "depName": "docker-compose",
    "lineNumber": 15,
    "purl": "pkg:github/buildkite-plugins/docker-compose-buildkite-plugin",
    "skipReason": undefined,
    "versionScheme": "semver",
  },
]
`;

exports[`lib/manager/buildkite/extract extractDependencies() extracts simple single plugin 1`] = `
Array [
  Object {
    "currentValue": "v2.0.0",
    "depName": "abc/detect-clowns",
    "lineNumber": 2,
    "purl": "pkg:github/abc/detect-clowns-buildkite-plugin",
    "skipReason": undefined,
    "versionScheme": "semver",
  },
]
`;
